# fastapi_tasks

./: alembic.ini  dump.rdb  pyproject.toml
app/: config.py  database.py  main.py
app/celery/: celery.py  tasks.py
app/dao/: base.py
app/migration/: env.py
app/migration/versions/: 6e194d69ad6e_initial.py
app/tasks/: dao.py  models.py  router.py  schemas.py
